--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "qrcode": "^1.5.4",
     "razorpay": "^2.9.6",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "sharp": "^0.34.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
